objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Quip Document Link for the Account Plan</description>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: used by Analytics Demo Data Tool. Do Not Remove! Who: Rodrigo</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Remaining__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <formula>CreditLimit__c -  Credit_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interaction_History__c</fullName>
        <label>Interaction History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maps_Advanced_Route_Visit_Windows__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM Maps Advanced lookup field on the SPM Maps Account page to show how visit windows can be created and used specifically across objects or directly related to a single unique object, e.g., an Account that has a specific visit window constraint that must be taken into consideration when routing, i.e., Friday between 9-11 AM EST only.</description>
        <inlineHelpText>Create a Visit Window that indicates the ideal visit days and times for a specific customer.  Maps Advanced will ensure all future visits are made within these windows during routing optimization.  Created by: Aaron Bendickson Aug, 18 2023</inlineHelpText>
        <label>Maps Advanced Route Visit Windows</label>
        <referenceTo>maps__AdvRouteVisitWindows__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ptnr_Onbd_Fmwk__Onboarding__c.Ptnr_Onbd_Fmwk__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quip_URL__c</fullName>
        <description>Quip Document Link for General Quip URLs</description>
        <label>Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s assets, or choose Contract Based to make renewals based off of contracts created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Account_Priority__c</fullName>
        <description>What: used in Reporting</description>
        <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Analytics_Latest_Sentiment__c</fullName>
        <description>This field is used for Data Pipelines demo. Added June 2021.</description>
        <label>Latest Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <description>What: used on the Account - Partner Page layout to detail the partner application date.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_CPQ_Churn_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Included on the CPQ Layout to identify Churn Risk</description>
        <label>Churn Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: used on the partner account page layout.</description>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Current_Year_Target__c</fullName>
        <description>What: Roll-up summary of the &quot;Target&quot; field on any Channel Plan marked as &quot;Active&quot;.</description>
        <label>Current Year Target</label>
        <summarizedField>SFDC_Channel_Account_Plan__c.Target__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Channel_Account_Plan__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Channel_Account_Plan__c.SDO_Experience_Partner_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Days_Since_Activity__c</fullName>
        <description>What: used in reports for days since last activity</description>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used on the Account - Community Page layout to detail Default Location information. Lookup to Location Object</description>
        <label>Default Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Default Price Book for Account reference.</description>
        <inlineHelpText>Default price book for work orders</inlineHelpText>
        <label>Default Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Adv_Maps_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM Maps Advanced Routing User Assignment Lookup Field - makes it easier to demo advanced maps routing/visit plans by simplifying the assignment and configuration.  Added by: Aaron Bendickson Aug 18, 2023</description>
        <label>Adv Maps User Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Dataset_Split__c</fullName>
        <description>SDO Maps Account number field to split maps-related datasets equally and easily 02-02-23</description>
        <label>Account Dataset Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Days_Since_Last_Visit__c</fullName>
        <description>SDO MAPS number field to represent days since visited Accounts in territories.  This highlights neglected accounts easily in reports and visually in Maps. 02-02-23</description>
        <label>Days Since Last Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Segment_c__c</fullName>
        <description>SDO MAPS segment field for maps &amp; territory planning segmentation use cases 02-02-23</description>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Service_Tier__c</fullName>
        <description>SDO MAPS service tier data field for service use cases in Maps and Territory Planning.  02-02-23 AB</description>
        <label>Service Tier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tag__c</fullName>
        <description>SPM MAPS Account dataset tag to help manage datasets in Maps and Territory Planning.  02-03-23 AB</description>
        <label>Tag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tier__c</fullName>
        <description>SDO MAPS tier field for maps routing and territory planning optimization and segmentation scenarios. 02-02-23 AB</description>
        <label>Maps Tier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Time_Per_Visit_c__c</fullName>
        <description>SDO MAPS number field to represent the suggested time per visit per Account or Location when visit/route planning.  Used in Maps Advanced route planning, Maps, and Territory Planning use cases. 02-02-23</description>
        <label>Time Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Visit_Frequency__c</fullName>
        <description>SDO MAPS visit frequency field used in Maps Advanced routing optimization use cases to determine how often to visit an Account location, e.g., 1 = once a month, 4 = weekly, 2 = 2 times per month.  02-02-23 AB</description>
        <label>Visit Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_AA_User_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Maps field for assigning a user to the account. Who: Aaron Bendickson. When: Sept, 2021.</description>
        <label>Maps - User Territory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_District__c</fullName>
        <description>Used in Salesforce Maps demo for maps external data sets</description>
        <label>Maps Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_TAM__c</fullName>
        <description>A number attribute field (Total Addressable Market) used to balance Accounts equally across territories</description>
        <label>TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_Territory__c</fullName>
        <description>Used in Salesforce Maps demo for maps external data sets</description>
        <label>Territory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of Active Leads for Partner Account</description>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number open opportunities owned by the current partner account</description>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Operating_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup field to Operating Hours Object</description>
        <inlineHelpText>If the customer has defined visiting hours, select them here.</inlineHelpText>
        <label>Operating Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Partner_Certification__c</fullName>
        <description>What: Used for Partner Certification Information</description>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Geographic_Coverage__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Program_Level__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Type__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                    <default>true</default>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partnership_Status__c</fullName>
        <description>What: Used on the Account - Partner page layout to show the partnership status</description>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_Default_Field_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS Field for Default Field Entitlement
Who: FSL team</description>
        <inlineHelpText>Select the default field service entitlement to use for this account and all of its assets</inlineHelpText>
        <label>Default Field Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: FSL/SFS Field for Service Territory</description>
        <inlineHelpText>What service territory is this account located in</inlineHelpText>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_ShippingGeo__c</fullName>
        <description>What: SFS/FSL Field used for Shipping Geo location</description>
        <label>ShippingGeo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Field for Work Type reference.
Who: SFS Team</description>
        <inlineHelpText>Default work type to use for this account for field service activity</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type_for_Quote_Creation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Work Type for Quote Creation Field.
Who: SFS Field</description>
        <label>Work Type for Quote Creation</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts (Work Type for Quote Creation)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>